--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -67,13 +67,13 @@
 }
 
 .tab-btn[data-tab="work"] {
-  color: #cf222e;
+  color: #1f883d;
 }
 
 .tab-btn[data-tab="work"].active {
-  color: #cf222e;
-  border-color: rgba(207, 34, 46, 0.35);
-  background: rgba(207, 34, 46, 0.08);
+  color: #1f883d;
+  border-color: rgba(31, 136, 61, 0.35);
+  background: rgba(31, 136, 61, 0.12);
 }
 
 .tab-btn[data-tab="education"] {
